# local-ai-agent

./: README.md  agent.py  app.py  pyproject.toml
tools/: finance.py  search.py
